# nuke-pyside-template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/.githooks/: pre-push
{{cookiecutter.project_slug}}/src/: about.py  logger.py  main.py  run_local.py
{{cookiecutter.project_slug}}/src/utils/: __init__.py  color_widgets.py
{{cookiecutter.project_slug}}/src/widgets/: about_widget.py  error_dialog.py  toolbar.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_about_widget.py  test_main.py
