[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.6, <=3.7.7"
PySide2 = "5.12.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-qt = "*"
pytest-cov = "*"
pytest-repeat = "*"
pytest-randomly = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
